Fix autosuggest accessibility Fix image gallery full screen accessibility Fix contrast of sort label

--- a/src/modules/flex_data/flex_data.scss
+++ b/src/modules/flex_data/flex_data.scss
@@ -60,7 +60,7 @@
 
       > span {
         font-size: $sizeFontSmall;
-        color: $colorBlack40;
+        color: $colorBlack60;
       }
 
       &-dropdown {
